--- a/config.json
+++ b/config.json
@@ -1,66 +1,82 @@
 {
-  "theme": {
-    "palettes": {
-      "dark": {
-        "background": "#1F1E42",
-        "text": "#F3DDC3",
-        "accentActive": "#7187FF",
-        "accentMute": "#49445C"
+  "theme":{
+    "palettes":{
+      "dark":{
+        "background":"#FFFFFF",
+        "text":"#000000",
+        "accentActive":"#7187ff",
+        "accentMute":"#F7F7F7"
       },
-      "light": {
-        "background": "#F3DDC3",
-        "text": "#1F1E42",
-        "accentActive": "#7187FF",
-        "accentMute": "#C9B7A9"
+      "light":{
+        "background":"#000000",
+        "text":"#FFFFFF",
+        "accentActive":"#7187ff",
+        "accentMute":"#30363d"
       }
     },
-    "fontFamily": "monospace",
-    "codeTheme": "prism/duotone-dark"
+    "fontFamily":"sans-serif",
+    "codeTheme":"prism/duotone-dark"
   },
-  "template": "default",
+  "template": "academia",
   "static_assets_folder": "static-assets",
-  "navigation": {
-    "home": "main.md",
+  "external_sources": [],
+  "navigation":{
+    "home":"vac.md",
     "fileOrdersInSidenav": [
-      "main.md",
-      "about.md"
+      "vac.md",
+      "principles.md",
+      "research-areas.md",
+      "projects.md",
+      "open-problems.md",
+      "publications.md",
+      "contribute.md",
+      "media.md"
     ],
-    "folderOrdersInSidenav": [],
+    "folderOrdersInSidenav": [
+      "research"
+    ],
     "external_links": [
       {
-        "text": "Blog",
-        "url": "https://vac.dev/research",
-        "category": "Links"
+        "text": "Specs/RFCs",
+        "url": "https://rfc.vac.dev/",
+        "category": "Resources"
+      },
+      {
+        "text": "Forum",
+        "url": "https://forum.vac.dev/",
+        "category": "Resources"
+      },
+      {
+        "text": "Waku.org",
+        "url": "https://waku.org",
+        "category": "Resources"
       }
+
     ]
   },
-  "ds_id": "waku",
+  "ds_id": "vac",
   "seo": {
-    "title": "title of your site",
-    "description": "description of your site",
-    "image": "your-site-preview-image.png",
-    "url": "https://yoursitedomain.org",
+    "title": "Vac Research",
+    "description": "Vac - Communication, Privacy, Etc.",
+    "cc": "Vac - Communication, Privacy, Etc",
+    "image": "vac-site-preview-image.png",
+    "url": "https://staging.vac.dev",
     "social_media": [
       {
         "provider": "twitter",
-        "handler": "your_tw_handler"
+        "handler": "vacp2p"
       },
       {
         "provider": "discord",
-        "handler": "your_dsc_handler"
+        "handler": "PQFdubGt6d"
       },
       {
         "provider": "github",
-        "handler": "your_gh_handler"
-      },
-      {
-        "provider": "telegram",
-        "handler": "waku_org"
-      },
-      {
-        "provider": "discourse",
-        "handler": "your_disc_address"
+        "handler": "vacp2p"
       }
     ]
+  },
+  "markdown": {
+     "autoEmbedYoutube": false
   }
 }
